add following relationship

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,10 @@
 <h2><%= @user.email %></h2>
 
+<div class="sidebar">
+	<%= follow_button @user %>
+</div>
+
+<div class="timeline">
+  <h2>Shouts</h2>
+  <%= render @shouts %>
+</div>
