add profile, make dashboard better

--- a/app/assets/stylesheets/shouter.scss
+++ b/app/assets/stylesheets/shouter.scss
@@ -1,3 +1,7 @@
+.shout, .container { 
+  font-family: "Courier New";
+}
+
 .shout {
   padding: 10px;
   border-top: 1px solid #EEE;
@@ -18,7 +22,7 @@
 }
 
 .container {
-  width: 880px;
+  width: 860px;
   margin: 0 auto;
 }
 
