--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,18 +1,15 @@
 <h1>Dashboard</h1>
 
 <div class="sidebar">
-  <%= form_for @text_shout do |form| %>
+  <%= form_for @dashboard.new_text_shout do |form| %>
     <%= form.text_field :body, placeholder: "Shout here" %>
     <%= form.submit "Shout!" %>
   <% end %>
 
-  <%= form_for @photo_shout do |form| %>
+  <%= form_for @dashboard.new_photo_shout do |form| %>
 	  <%= form.file_field :photo %>
 	  <%= form.submit "PhotoShout!" %>
 <% end %>
 </div>
 
-<div class="timeline">
-  <h2>Shouts</h2>
-    <%= render @shouts %>
-</div>
+<%= render @dashboard.timeline %>
