--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,7 @@
-<h2><%= @user.email %></h2>
+<h2><%= @profile.user.email %></h2>
 
 <div class="sidebar">
-	<%= follow_button @user %>
+	<%= follow_button @profile.user %>
 </div>
 
-<div class="timeline">
-  <h2>Shouts</h2>
-  <%= render @shouts %>
-</div>
+<%= render @profile.timeline %>
